initial commit- component decorator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!--COMPONENT MARK-UP/TEMPLATE-->
+<!--DOUBLE BRACKETED VARIABLES IN TEMPLATE URL ARE ASSIGNED VALUES AS OPTIONS IN THE RESPECTIVE 
+COMPONENT CLASS-->
+
+
 <h1>
   {{title}}
 </h1>
